// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`get one data point 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Invalid input: expected string, received array",
      "path": [
        "weather",
      ],
    },
  ],
  "status": "validation error",
}
`;

exports[`get all 1`] = `
{
  "bar": 123,
  "foo": "bar",
  "timed": "out of time",
}
`;

exports[`get all 2`] = `
{
  "bar": 123,
  "foo": "😎",
  "timed": "out of time",
}
`;

exports[`get all 3`] = `
{
  "bar": 123,
  "foo": "☂️",
  "timed": "out of time",
}
`;

exports[`get all 4`] = `
{
  "bar": 123,
  "foo": "🌊",
  "timed": "out of time",
}
`;

exports[`get all 5`] = `
{
  "bar": 123,
  "foo": "🏄‍♂️",
  "timed": "out of time",
}
`;

exports[`get all 6`] = `
{
  "bar": 123,
  "foo": "Async payload",
  "timed": "out of time",
}
`;

exports[`error handling 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Invalid input: expected string, received array",
      "path": [
        "weather",
      ],
    },
  ],
  "status": "validation error",
}
`;

exports[`error handling 2`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "boolean",
      "message": "Invalid input: expected boolean, received string",
      "path": [
        "highTide",
      ],
    },
  ],
  "status": "validation error",
}
`;
